cmake_minimum_required(VERSION 3.10)

project(corte2_ent1)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(armstrong corte2_e/ent1/armstrong.cpp)
add_executable(Hamming corte2_e/ent1/Hamming.cpp)
add_executable(parking corte2_e/ent1/parking.cpp)
add_executable(SpaceAge corte2_e/ent1/SpaceAge.cpp)
